[project]
name = "grnet"
version = "0.1.0"
description = "Deep Learning architecture for solving Goal Recognition tasks"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=1.19.2,<1.24",
    "tensorflow==2.10.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "keras>=2.10.0,<3.0",
    "scikit-learn>=0.24.2",
    "pandas>=1.3.0",
    "matplotlib>=3.4.2",
    "seaborn>=0.11.2",
    "jupyterlab>=3.3.0",
    "notebook>=6.4.3",
    "ipykernel>=6.4.1",
    "h5py>=3.7.0",
    "pillow>=8.3.1",
    "scipy>=1.7.0",
    "joblib>=1.0.1",
    "tqdm>=4.62.3",
    "plotly>=5.4.0",
    "optuna>=2.10.0",
    "tensorboard>=2.10.0",
    "xgboost>=1.5.0",
    "statsmodels>=0.12.2",
    "pyyaml>=5.4.1",
    "unified-planning>=1.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grnet"]
